# FlareSolverr

./: .gitignore  CAPTCHA_SOLVERS.md  CHANGELOG.md  Dockerfile  Makefile  PODMAN.md  README.md  docker-compose.integration.yml  docker-compose.local.yml  docker-compose.yml  flaresolverr.service  pyproject.toml  test-integration-local.sh
.github/: JS_INJECTION_ISSUE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/docker/tinyproxy/: Dockerfile  tinyproxy.conf
.github/workflows/: build-chromium-selfhosted.yml  build-chromium-split.yml  build-chromium.yml  check.yml  integration-captcha-solvers.yml  integration-manual.yml  release-docker.yml  release.yml
chromium-patches/: Dockerfile  Dockerfile.runtime  build.sh  gn-args.txt
chromium-patches/patches/: 0001-itrusted-cdp-events.patch  0002-cdp-mouse-screenxy.patch  0003-webdriver-undefined.patch  0004-webgl-spoof-flags.patch  0005-preload-script-flag.patch  0006-worker-prelude-injection.patch  0007-remove-headless-ua-token.patch  apply.py
examples/podman/: README.md
examples/podman/restricted/: 01-create-networks.sh  10-build-dnsdist.sh  20-run-dnsdist.sh  30-run-flaresolverr.sh  40-allow-private-routes.sh  install.sh
examples/podman/restricted/dnsdist/: Containerfile  dnsdist.conf  fetch-and-run.sh
examples/podman/restricted/systemd/: flaresolverr-podman-dnsdist.service  flaresolverr-podman-networks.service  flaresolverr-podman-restricted.service  podman-restricted.env.example
examples/podman/standard/: run.sh
examples/podman/standard/systemd/: flaresolverr-podman.service
src/: build_package.py  captcha_solvers.py  dtos.py  flaresolverr.py  flaresolverr_service.py  metrics.py  sessions.py  stealth.js  tests.py  tests_sites.py  utils.py
src/bottle_plugins/: prometheus_plugin.py
src/flaresolverr/: __init__.py  build_package.py  captcha_solvers.py  dtos.py  flaresolverr.py  flaresolverr_service.py  metrics.py  sessions.py  stealth.js  stealth_fallback.js  utils.py
src/flaresolverr/backends/: __init__.py  base.py  browser_context.py  camoufox.py  selenium_context.py  seleniumbase.py  undetected_chrome.py
src/flaresolverr/bottle_plugins/: error_plugin.py  logger_plugin.py  prometheus_plugin.py
src/flaresolverr/client/: README.md  __init__.py  actions.py  client.py  models.py
src/flaresolverr/undetected_chromedriver/: __init__.py  cdp.py  devtool.py  dprocess.py  options.py  patcher.py  reactor.py  webelement.py
src/undetected_chromedriver/: __init__.py  patcher.py
tests/: conftest.py  extract-stealth-chrome.sh
tests/integration/: test_api.py  test_bot_challenge.py  test_captcha_solver_param.py  test_captcha_solvers_real.py  test_sites.py  test_turnstile_real.py
tests/unit/: test_actions.py  test_backends.py  test_bottle_plugins.py  test_browser_context.py  test_camoufox_backend.py  test_captcha_solvers.py  test_challenge_pages.py  test_client.py  test_cookies_timing.py  test_custom_headers.py  test_dtos.py  test_flaresolverr.py  test_metrics.py  test_navigation_errors.py  test_session_locking.py  test_sessions.py  test_turnstile_retry.py  test_utils.py
